# reddit-crawl-mvp

./: .cursorrules  .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .vercel-force-deploy-1756095559  .vercelignore  .yamllint.yml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_UPDATE_SUMMARY.md  Dockerfile  EXTERNAL_CONTROL_DEPLOYMENT_SUMMARY.md  EXTERNAL_CONTROL_SUMMARY.md  Makefile  NOTIFICATION_SYSTEM_SUMMARY.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  README.md  SECURITY_IMPLEMENTATION.md  TASK_18_3_IMPLEMENTATION_SUMMARY.md  VERCEL_DASHBOARD_GUIDE.md  VERCEL_DEPLOYMENT_GUIDE.md  admin_api_server.py  admin_dashboard.py  alembic.ini  check_crawling_results.py  debug_ghost_publishing.py  demo_task_18_4_results_20250811_081203.json  deploy-to-aws.md  deploy-to-heroku.md  deploy-to-railway.md  deploy-trigger.txt  deploy_as_post.py  deploy_production.py  deploy_to_ghost.py  diagnose_ghost_api.py  docker-compose.prod.yml  docker-compose.staging.yml  (+69 more)
.github-disabled/: DEPLOYMENT.md
api/: ai-process.js  database.js  env-check.js  ghost-publish.js  health.js  index.js  logs.js  recent-posts.js  reddit-collect-new.js  reddit-collect.js  reddit-rss.js  reddit-v2.js  simple-reddit-test.js  stats.js  takedown_api.py  test-reddit.js  test.js
app/: __init__.py  auth.py  background_tasks.py  backup_tasks.py  celery_app.py  celery_utils.py  config.py  error_handling.py  infrastructure.py  logging_config.py  main.py  redis_client.py  resilience_monitor.py  security.py  security_init.py  state_tracker.py  transaction_manager.py  vault_client.py
docker/: Dockerfile.api  Dockerfile.scheduler  Dockerfile.worker  prometheus.yml
docs/: api-documentation.md  contributing.md  database-schema.md  development-setup.md  disaster-recovery.md  monitoring-alerting-procedures.md  monitoring-guide.md  operations-manual.md  spec.md  task-2-1-implementation-summary.md  tests.md  troubleshooting-guide.md
migrations/: env.py
public/: dashboard.html  index.html
scripts/: backup-database.sh  backup-vault.sh  build-containers.sh  demo-task-18-3.sh  deploy-production-optimized.sh  deploy.sh  docker-manage.sh  health-check.sh  init_railway_db.py  optimize-images.sh  pre-deployment-check.sh  restore-database.sh  restore-vault.sh  run-e2e-pipeline-test.sh  run-task-18-2-verification.sh  run-task-18-3-verification.sh  run-verification-tests.sh  security-scan.sh  setup-monitoring.sh  setup-staging-environment.sh  test-backup-restore.sh  test-slack-webhook.py  test_migrations.py  validate_schema.py  (+2 more)
(+205 files in other folders)
